added exhibition_artefacts model and integrating with exhibition controller
